--- a/banking-system/config/config.json
+++ b/banking-system/config/config.json
@@ -1,26 +1,20 @@
 {
-    "development": {
-        "username": "root",
-        "password": "",
-        "database": "bankapp_db",
-        "host": "localhost",
-        "port": 3306,
-        "dialect": "mysql"
-    },
-    "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
-        "port": 3306,
-        "dialect": "mysql"
-    },
-    "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
-        "port": 3306,
-        "dialect": "mysql"
-    }
+  "development": {
+    "username": "root",
+    "password": "Austin96",
+    "database": "passport_demo",
+    "host": "localhost",
+    "dialect": "mysql"
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
+  }
 }
