--- a/banking_system/config/config.json
+++ b/banking_system/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "Austin96",
-    "database": "passport_demo",
+    "database": "banking_system",
     "host": "localhost",
     "dialect": "mysql"
   },
