--- a/banking_system/package.json
+++ b/banking_system/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "mysql2": "^1.7.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
