--- a/banking_system/config/config.json
+++ b/banking_system/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "coding123",
+    "password": "Austin96",
     "database": "banking_system",
     "host": "localhost",
     "dialect": "mysql"
